[gd_scene load_steps=3 format=2]

[ext_resource path="res://DialogueBox.gd" type="Script" id=1]
[ext_resource path="res://Option.tscn" type="PackedScene" id=2]

[node name="DialogueBox" type="GraphNode"]
margin_left = 251.0
margin_top = 120.0
margin_right = 557.0
margin_bottom = 520.0
rect_min_size = Vector2( 300, 200 )
mouse_filter = 1
title = "Ex"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0, 0.552941, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 0.654902, 0, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 0.654902, 0, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
option = ExtResource( 2 )

[node name="Speaker" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 290.0
margin_bottom = 49.0
rect_min_size = Vector2( 273, 25 )
size_flags_vertical = 3
wrap_enabled = true

[node name="Text" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 50.0
margin_right = 290.0
margin_bottom = 200.0
rect_min_size = Vector2( 273, 150 )
size_flags_vertical = 3
wrap_enabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 201.0
margin_right = 290.0
margin_bottom = 245.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add" type="Button" parent="VBoxContainer"]
margin_right = 274.0
margin_bottom = 20.0
text = "Add Dialogue Option"

[node name="Remove" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 274.0
margin_bottom = 44.0
text = "Remove Dialogue Option"
[connection signal="close_request" from="." to="." method="_on_DialogueBox_close_request"]
[connection signal="resize_request" from="." to="." method="_on_DialogueBox_resize_request"]
[connection signal="button_up" from="VBoxContainer/Add" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="VBoxContainer/Remove" to="." method="_on_Remove_button_up"]
